--- a/.github/workflows/webassembly.yml
+++ b/.github/workflows/webassembly.yml
@@ -21,3 +21,7 @@ jobs:
           git clone https://github.com/raysan5/raylib 
           cd raylib/src
           make PLATFORM=PLATFORM_WEB EMSDK_PATH="D:/a/raylib-game-jam/raylib-game-jam/emsdk-cache/emsdk-main" -B
+      - name: build
+        run: |
+          cd src
+          make PLATFORM=PLATFORM_WEB
