--- a/.github/workflows/webassembly.yml
+++ b/.github/workflows/webassembly.yml
@@ -23,10 +23,10 @@ jobs:
           cd raylib/src
           make PLATFORM=PLATFORM_WEB EMSDK_PATH="D:/a/raylib-game-jam/raylib-game-jam/emsdk-cache/emsdk-main" -B
       - name: test
-        run:
+        run: |
           cd src/../../raylib
           dir
       - name: build
         run: |
           cd src
-          make PLATFORM=PLATFORM_WEB
+          make PLATFORM=PLATFORM_WEB EMSDK_PATH="D:/a/raylib-game-jam/raylib-game-jam/emsdk-cache/emsdk-main"
